--- a/static-resources/index.html
+++ b/static-resources/index.html
@@ -10,7 +10,9 @@
     <script type="text/javascript" src="js/client.js"></script>
     <script type="text/javascript">
   var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-24734196-1']);
+  _gaq.push(['_setAccount', 'UA-24734196-2']);
+  _gaq.push(['_setDomainName', 'none']);
+  _gaq.push(['_setAllowLinker', true]);
   _gaq.push(['_trackPageview']);
 
   (function() {
