--- a/static-resources/index.html
+++ b/static-resources/index.html
@@ -1,34 +1,46 @@
 <html>
   <head>
-    <title>WebSocket & ClojureScript</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/text.css">
-    <link rel="stylesheet" href="css/960_12_col.css">
-    <link rel="stylesheet" href="css/main.css">
+    <title>WebSocket, Clojure & ClojureScript</title>
+    <link href="/css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+    <link href="/css/print.css" media="print" rel="stylesheet" type="text/css" />
+    <!--[if lt IE 8]>
+      <link href="/css/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
+    <![endif]-->
   </head>
-  <body onload="client.init_app();">
-    <h1>WebSocket & ClojureScript</h1>
-    <div class="container_12">
-      <div class="prefix_1 grid_4">
+  <body onload="client.init_app();" class="two-col">
+    <div id="container">
+      <div id="header">
+        <h1>WebSocket, Clojure & ClojureScript</h1>
+      </div>
+      
+      <div id="sidebar">
         <label for="msg">Write your message:</label>
-        <input id="msg" type="text"/>
+        <input id="msg" type="text" class="title"/>
       </div>
-      <div class="grid_1 prefix_5">
-        <a href="http://ec2-46-137-58-250.eu-west-1.compute.amazonaws.com:8108/"
-           data-url="http://j.mp/oR4FlM"
-           data-counturl="http://ec2-46-137-58-250.eu-west-1.compute.amazonaws.com:8108/"
-           data-via="neotyk"
-           data-related="neotyk"
-           data-count="none"
-           data-text="Check out #ClojureScript talking to #Clojure over #WebSocket"
-           class="twitter-share-button">Tweet</a>
-      </div>
-      <div class="clear"></div>
-      <div class="grid_10 prefix_1 suffix_1">
+
+      <div id="content">
+        <h2>Messages</h2>
         <ul id="messages">
-          <li><h2>Messages</h2></li>
         </ul>
       </div>
+
+      <div id="footer">
+        <ul>
+          <li><a href="http://clojure.org">Clojure</a></li>
+          <li><a href="https://github.com/clojure/clojurescript">ClojureScript</a></li>
+          <li><a href="http://dev.w3.org/html5/websockets/">WebSocket</a></li>
+          <li>
+            <a href="http://ec2-46-137-58-250.eu-west-1.compute.amazonaws.com:8108/"
+               data-url="http://j.mp/oR4FlM"
+               data-counturl="http://ec2-46-137-58-250.eu-west-1.compute.amazonaws.com:8108/"
+               data-via="neotyk"
+               data-related="neotyk"
+               data-count="none"
+               data-text="Check out #ClojureScript talking to #Clojure over #WebSocket"
+               class="twitter-share-button">Tweet</a>
+          </li>
+        </ul>
+      </div> 
     </div>
     <script type="text/javascript" src="js/client.js"></script>
     <script src="http://platform.twitter.com/widgets.js" type="text/javascript"></script>
