--- a/static-resources/index-dev.html
+++ b/static-resources/index-dev.html
@@ -15,6 +15,7 @@
 
       <section id="sidebar">
         <input id="msg" type="text" class="title" label="Write your message"/>
+        <div id="nick" class="nick me">no nick name</div>
       </section>
       
       <section id="content">
