--- a/static-resources/index.html
+++ b/static-resources/index.html
@@ -120,10 +120,11 @@
       return unescape(param.split('=')[1]);
       }
       }
-      }
-      function recordOutboundLink(link, category) {
-      _gat._getTrackerByName()._trackEvent(category, link.href);
-      setTimeout('document.location = "' + link.href + '"', 100);
-      }
+      };
+          function recordOutboundLink(link, category) {
+            _gat._getTrackerByName()._trackEvent(category, link.href);
+            setTimeout('document.location = "' + link.href + '"', 100);
+          }
+    </script>
   </body>
 </html>
